--- a/app/src/main/res/layout/grid_tile.xml
+++ b/app/src/main/res/layout/grid_tile.xml
@@ -8,13 +8,33 @@
 
     <ImageView
         android:id="@+id/grid_tile"
-        android:layout_width="180dp"
-        android:layout_height="173dp"
+        android:layout_width="0dp"
+        android:layout_height="144dp"
 
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toStartOf="@+id/grid_tile_textView_squareM"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_notification_clear_all" />
+
+    <TextView
+        android:id="@+id/grid_tile_textView_squareM"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="226dp"
+        android:text="size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/grid_tile"
+        app:layout_constraintTop_toTopOf="@+id/grid_tile" />
+
+    <TextView
+        android:id="@+id/grid_tile_textView_desciption"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="description"
+        app:layout_constraintBottom_toBottomOf="@+id/grid_tile"
+        app:layout_constraintStart_toEndOf="@+id/grid_tile" />
+
 
 </android.support.constraint.ConstraintLayout>
