--- a/app/src/main/res/layout/grid_tile.xml
+++ b/app/src/main/res/layout/grid_tile.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ImageView
         android:id="@+id/grid_tile"
         android:layout_width="0dp"
@@ -23,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="226dp"
-        android:text="size"
+        android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/grid_tile"
         app:layout_constraintTop_toTopOf="@+id/grid_tile" />
@@ -32,7 +33,7 @@
         android:id="@+id/grid_tile_textView_desciption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="description"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="@+id/grid_tile"
         app:layout_constraintStart_toEndOf="@+id/grid_tile" />
 
